clapi_macros/test_suite/tests/ui/fail/invalid_attribute_key/invalid_command_key.rs
use clapi::macros::*;

#[command(abc="hello")]
fn app(){}

fn main(){}